tooling/nargo_cli/tests/snapshots/execution_success/brillig_entry_points_regression_8069/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[brillig_entry_points_regression_8069] Circuit output: 0
